== 1.3.2 rev005

    Security Fixes:
    ----------------------------
    + SQL injections processing `tableName` (#2738);

== 1.3.2 rev004

    Bugfixes:
    ----------------------------
    + Fix for incompatible 32 bit long2ip() (broken in PHP 7.1.0);
    + Make database grant host configurable;
    + Restore API filter_by functionality. (#2392);
    + Read global API parameters for API GET requests. (#2455);
    + define(BASE) documentation fixes;

== 1.3.2 rev003

    Bugfixes:
    ----------------------------
    + Check for compatible 32 bit long2ip() (broken in PHP 7.1.0);
    + Check for PHPMailer submodule when sending mail. #2159;
    + Check for ctype function support. This is a separate module on FreeBSD;
    + phpmailer fix for latest phpmailer version;

== 1.3.2 rev002

    Bugfixes:
    ----------------------------
    + misc php7.2 fixes;
    + Fix display of missing fields in upgrade-execute.php;

== 1.3.2 rev001

    Bugfixes:
    ----------------------------
    + misc php7.2 fixes;
    + Fixed mac address format lookup;
    + Fix download logs doesn't work. #2013;
    + Fix inconsistant API success value returned;
    + Update print-single-rack.php;
    + Fix show only supernets;

== 1.3.2

    Enhancements, changes:
    ----------------------------
    + url_rewrite has changed, please use new rewrite scheme (https://phpipam.net/news/new_rewrite_scheme/);
    + Search for matching subnet in all VRFs feature enabled when importing addresses;
    + Added new config option to show custom fields separated from standard fields when editing IP address;
    + Added Required fields subpage to define IP address fields that must be filled in;
    + Performance + bug fixes (#1660, #1657);
    + MasterSubnet dropdown list is dynamically generated via AJAX call;
    + Bandwidth calculator;
    + Support 8U rack sizes. (#1891);
    + API:
        + New last_subnet API calls (#1655);

    Translations:
    ----------------------------