@@ -3,6 +3,7 @@
     Security Fixes:
     ----------------------------
     + SQL injections processing `tableName` (#2738);
+    + SQL injections processing `ftype` (#2751);
 
 == 1.3.2 rev004
 
